fix navbar sizing on smaller sizes

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -259,7 +259,9 @@ footer {
   #hamburgerEsports,
   #hamburgerShopping,
   #hamburgerGuides {
-    display: inline-block; } }
+    display: inline-block; }
+  nav .searchBar .wrapper input {
+    width: 500px; } }
 
 @media (max-width: 850px) {
   #podcasts,
